--- a/index.html
+++ b/index.html
@@ -52,11 +52,12 @@
       <section class="card">
         <h2>Information</h2>
         <!--Information placeholder about the weather, number of visits to the page, etc.-->
+        <div id="weather"></div>
       </section>
     </main>
     <footer>
-      <p>&copy Ravy Lim, current date, Country: Cambodia</p>
-      <p id="lastModified">This part will be populate with JS code</p>
+      <p id="copyright">&copy</p>
+      <p id="lastModified"></p>
     </footer>
   </body>
 </html>
