--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </section>
     </main>
     <footer>
-      <p id="copyright">&copy</p>
+      <p id="copyright">&copy;</p>
       <p id="lastModified"></p>
     </footer>
   </body>
