--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       content="WDD 230 - Web Frontend Development, Ravy Lim, week1 team activity"
     />
     <meta name="author" content="Ravy Lim" />
-    <title>Ravy Lim WDD 230 - Web Frontend Development</title>
+    <title>Ravy Lim - WDD 230 - Web Frontend Development</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
