--- a/week1/index.html
+++ b/week1/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/index.css" />
     <script src="./scripts/index.js" defer></script>
     <title>Document</title>
-</head>
-<body>
-    <header></header>
+  </head>
+  <body>
+    <header>Hello, World!</header>
     <main></main>
     <footer></footer>
-</body>
+  </body>
 </html>
