--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta
       name="description"
-      content="WDD 230 - Web Frontend Development, Ravy Lim, week1 team activity"
-    />
-    <meta name="author" content="Ravy Lim" />
+      content="WDD 230 - Web Frontend Development - Ravy Lim - course assignment portal"
+    >
+    <meta name="author" content="Ravy Lim" >
     <title>Ravy Lim - WDD 230 - Web Frontend Development</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,7 +22,7 @@
 
     <link rel="stylesheet" href="./styles/base.css" />
     <link rel="stylesheet" href="./styles/larger.css" />
-    <script src="./scripts/getDates.js" defer></script>
+    <script src="scripts/getDates.js" defer></script>
   </head>
   <body>
     <header>
@@ -40,7 +40,10 @@
       <section class="card">
         <h2>Learning Activities</h2>
         <ul>
-          <li>Week1: <a href="#">Layout</a> | <a href="#">Media Query</a> | <a href="#">Js Pen</a></li>
+          <li>
+            Week1: <a href="#">Layout</a> | <a href="#">Media Query</a> |
+            <a href="#">Js Pen</a>
+          </li>
           <li>Week2: <a href="#">------</a></li>
           <li>Week3: <a href="#">------</a></li>
           <li>Week4: <a href="#">------</a></li>
