--- a/week1/index.html
+++ b/week1/index.html
@@ -10,6 +10,6 @@
   <body>
     <header>Hello, World!</header>
     <main></main>
-    <footer></footer>
+    <footer>&copy;<span id="year"></span> &bull; John Doe</footer>
   </body>
 </html>
