--- a/week1/chamber-site-plan.html
+++ b/week1/chamber-site-plan.html
@@ -7,7 +7,7 @@
       name="description"
       content="WDD 230 - Web Frontend Development - Ravy Lim - course assignment portal"
     />
-    <meta name="author" content="Ravy Lim" >
+    <meta name="author" content="Ravy Lim" />
     <title>Rexburg Chamber of Commerce Homepage</title>
     <!--Typography-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -22,5 +22,129 @@
     <!--Link to JS-->
     <script src="./scripts/chamber-site-plan.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1><b>Site Name:</b> Rexburg Chamber of Commerce</h1>
+    </header>
+
+    <main>
+      <section id="sitePurpose">
+        <h1>Site Purpose:</h1>
+        <h3>Welcome to Rexburg Chamber of Commerce</h3>
+
+        <p>
+          At Rexburg Chamber of Commerce, our mission is to foster a thriving
+          business community by connecting, supporting, and empowering local
+          enterprises. This page serves as a hub for our members and the broader
+          community, offering valuable resources, networking opportunities, and
+          insights to promote economic growth.
+        </p>
+
+        <h3>What We Offer:</h3>
+
+        <li>
+          <b>Business Networking:</b> Facilitating connections among local
+          businesses to encourage collaboration and growth.
+        </li>
+        <li>
+          <b>Resources:</b> Providing essential tools, guides, and information
+          to empower businesses with knowledge and expertise.
+        </li>
+        <li>
+          <b>Community Engagement:</b> Fostering a sense of community by
+          promoting local events, initiatives, and shared interests.
+        </li>
+        <li>
+          <b>Advocacy:</b> Representing the interests of our business community
+          and advocating for policies that support economic development.
+        </li>
+
+        <h3>Join Us in Building a Stronger Community</h3>
+
+        <p>
+          Whether you're a seasoned entrepreneur or just starting, [Your Chamber
+          of Commerce Name] is here to support you on your business journey.
+          Together, let's contribute to the prosperity and vibrancy of our local
+          economy. Explore the resources, connect with fellow business owners,
+          and discover the opportunities that [Your Chamber of Commerce Name]
+          brings to the heart of our community.
+        </p>
+      </section>
+      <section id="Senarios">
+        <h1>Senarios:</h1>
+        <p>
+          <b>Business Resources and Networking:</b> <br />
+          Scenario: A local business owner new to the area is seeking
+          information on available resources and networking opportunities
+          provided by the chamber of commerce. They want to know how the chamber
+          supports local businesses and facilitates connections within the
+          community.
+        </p>
+
+        <p>
+          <b>Community Events and Engagement:</b> <br />
+          Scenario: A resident interested in community involvement wants to
+          explore upcoming events, initiatives, and community projects organized
+          by the chamber of commerce. They are looking for ways to actively
+          participate and contribute to the development and well-being of the
+          local community.
+        </p>
+
+        <p>
+          <b>Membership Benefits and Application Process:</b> <br />
+          Scenario: An entrepreneur considering joining the chamber of commerce
+          is looking for detailed information on the benefits of membership.
+          They are interested in understanding how being a member can positively
+          impact their business, as well as the steps and requirements involved
+          in the membership application process.
+        </p>
+      </section>
+      <section id="colorShema">
+        <h1>Color Shema</h1>
+        Palette URL:
+        <a
+          href="https://coolors.co/8d8741-659dbd-daad86-bc986a-fbeec1"
+          target="_blank"
+          >Color Palette</a
+        >
+
+        <table class="colors">
+          <tr>
+            <th>Primary</th>
+            <th>Secondary</th>
+            <th>Accent 1</th>
+            <th>Accent 2</th>
+          </tr>
+
+          <tr>
+            <td class="primary">[#659DBD]</td>
+            <td class="secondary">[#FBEEC1]</td>
+            <td class="accent1">[#DAAD86]</td>
+            <td class="accent2">[#8D8741]</td>
+          </tr>
+        </table>
+      </section>
+
+      <section id="typography">
+        <h1>Typography</h1>
+        <h4 id="merienda">Heading Font: Merienda</h4>
+        <h4 id="roboto">Paragraph Font: Roboto</h4>
+      </section>
+
+      <section id="wireframe">
+        <h1>Wireframe</h1>
+        <div id="largerScreen">
+         <h3>Desktop Screen</h3>
+         <img src="../week1/images/larger screen.png" alt="Wireframe for Desktop View">
+        </div>
+
+        <div id="smallerScreen">
+          <h3>Mobile Screen</h3>
+          <img src="../week1/images/smaller screen.png" alt="Wireframe for mobile View">
+        </div>
+      </section>
+    </main>
+
+    <footer></footer>
+  </body>
 </html>
