--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -42,22 +42,17 @@
 
         <h3>What We Offer:</h3>
 
-        <li>
-          <b>Business Networking:</b> Facilitating connections among local
-          businesses to encourage collaboration and growth.
-        </li>
-        <li>
-          <b>Resources:</b> Providing essential tools, guides, and information
-          to empower businesses with knowledge and expertise.
-        </li>
-        <li>
-          <b>Community Engagement:</b> Fostering a sense of community by
-          promoting local events, initiatives, and shared interests.
-        </li>
-        <li>
-          <b>Advocacy:</b> Representing the interests of our business community
-          and advocating for policies that support economic development.
-        </li>
+        <b>Business Networking:</b> Facilitating connections among local
+        businesses to encourage collaboration and growth.
+
+        <b>Resources:</b> Providing essential tools, guides, and information to
+        empower businesses with knowledge and expertise.
+
+        <b>Community Engagement:</b> Fostering a sense of community by promoting
+        local events, initiatives, and shared interests.
+
+        <b>Advocacy:</b> Representing the interests of our business community
+        and advocating for policies that support economic development.
 
         <h3>Join Us in Building a Stronger Community</h3>
 
@@ -134,13 +129,19 @@
       <section id="wireframe">
         <h1>Wireframe</h1>
         <div id="largerScreen">
-         <h3>Desktop Screen</h3>
-         <img src="../week1/images/larger screen.png" alt="Wireframe for Desktop View">
+          <h3>Desktop Screen</h3>
+          <img
+            src="../week01/images/larger screen.png"
+            alt="Wireframe for Desktop View"
+          />
         </div>
 
         <div id="smallerScreen">
           <h3>Mobile Screen</h3>
-          <img src="../week1/images/smaller screen.png" alt="Wireframe for mobile View">
+          <img
+            src="../week01/images/smaller screen.png"
+            alt="Wireframe for mobile View"
+          />
         </div>
       </section>
     </main>
