--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -131,7 +131,7 @@
         <div id="largerScreen">
           <h3>Desktop Screen</h3>
           <img
-            src="../week01/images/larger screen.png"
+            src="./images/larger screen.png"
             alt="Wireframe for Desktop View"
           />
         </div>
@@ -139,7 +139,7 @@
         <div id="smallerScreen">
           <h3>Mobile Screen</h3>
           <img
-            src="../week01/images/smaller screen.png"
+            src="./images/smaller screen.png"
             alt="Wireframe for mobile View"
           />
         </div>
