--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <meta
       name="description"
       content="WDD 230 - Web Frontend Development - Ravy Lim - course assignment portal"
-    />
+    >
     <meta name="author" content="Ravy Lim" />
-    <title>Rexburg Chamber of Commerce Homepage</title>
+    <title>Site Plan: Rexburg Chamber of Commerce Homepage</title>
     <!--Typography-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -24,7 +24,7 @@
   </head>
   <body>
     <header>
-      <h1><b>Site Name:</b> Rexburg Chamber of Commerce</h1>
+      <h1><b>Site Plan Name:</b> Rexburg Chamber of Commerce</h1>
     </header>
 
     <main>
