--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta
       name="description"
-      content="WDD 230 - Web Frontend Development - Ravy Lim - course assignment portal"
-    >
-    <meta name="author" content="Ravy Lim" />
+      content="WDD 230 - Web Frontend Development - Ravy Lim - course assignment portal">
+    <meta name="author" content="Ravy Lim">
     <title>Site Plan: Rexburg Chamber of Commerce Homepage</title>
     <!--Typography-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
