--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
       <span>Ravy Lim</span>
     </header>
     <nav>
-      <a id="home" href="https://udomravylim.github.io/wdd230/">Home</a>
+      <a id="home" href="index.html">Home</a>
       <a href="#">Chamber</a>
-      <a href="https://udomravylim.github.io/wdd230/week01/chamber-site-plan.html">Site Plan</a>
+      <a href="week01/chamber-site-plan.html">Site Plan</a>
       <a href="#">Form</a>
     </nav>
     <main>
