--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
       content="WDD 230 , Ravy Lim, course assignment portal"
-    >
-    <meta name="author" content="Ravy Lim" >
+    />
+    <meta name="author" content="Ravy Lim" />
+    <!--Social Media Meta Tags-->
+    <meta property="og:title" content="WDD 240 - Homepage" />
+    <meta property="og:type" content="Angkor Wat - Cambodia Pride" />
+    <meta property="og:url" content="https://udomravylim.github.io/wdd230/" />
+    <meta
+      property="og:image"
+      content="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.tripadeal.com.au%2Fdeals%2F4559-vietnam-cambodia-discovery&psig=AOvVaw3CUJ84P5LIZES1WETBHScL&ust=1706243077034000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCKC45fzY94MDFQAAAAAdAAAAABAE"
+    />
+
     <title>Ravy Lim - WDD 230 - Web Frontend Development</title>
+    <link rel="icon" href="rasengan.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -44,7 +54,7 @@
             Week1: <a href="#">Layout</a> | <a href="#">Media Query</a> |
             <a href="#">Js Pen</a>
           </li>
-          <li>Week2: <a href="#">------</a></li>
+          <li>Week2: <a href="./week02/design.html">Design Principles</a></li>
           <li>Week3: <a href="#">------</a></li>
           <li>Week4: <a href="#">------</a></li>
           <li>Week5: <a href="#">------</a></li>
