--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
     <meta name="author" content="Ravy Lim" />
     <!--Social Media Meta Tags-->
     <meta property="og:title" content="WDD 240 - Homepage" />
-    <meta property="og:type" content="Angkor Wat - Cambodia Pride" />
+    <meta property="og:description" content="Angkor Wat - Cambodia Pride" />
     <meta property="og:url" content="https://udomravylim.github.io/wdd230/" />
     <meta
       property="og:image"
-      content="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.tripadeal.com.au%2Fdeals%2F4559-vietnam-cambodia-discovery&psig=AOvVaw3CUJ84P5LIZES1WETBHScL&ust=1706243077034000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCKC45fzY94MDFQAAAAAdAAAAABAE"
-    />
+      content="https://images.tripadeal.com.au/cdn-cgi/image/format=auto,width=1600/https://cstad.s3.ap-southeast-2.amazonaws.com/4559_Vietnam_Cambodia_WEB_HERO_1.jpg">
 
     <title>Ravy Lim - WDD 230 - Web Frontend Development</title>
     <link rel="icon" href="rasengan.ico" />
