--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <meta property="og:url" content="https://udomravylim.github.io/wdd230/" />
     <meta
       property="og:image"
-      content="https://images.tripadeal.com.au/cdn-cgi/image/format=auto,width=1600/https://cstad.s3.ap-southeast-2.amazonaws.com/4559_Vietnam_Cambodia_WEB_HERO_1.jpg">
+      content="https://images.tripadeal.com.au/cdn-cgi/image/format=auto,width=1600/https://cstad.s3.ap-southeast-2.amazonaws.com/4559_Vietnam_Cambodia_WEB_HERO_1.jpg"
+    />
 
     <title>Ravy Lim - WDD 230 - Web Frontend Development</title>
     <link rel="icon" href="rasengan.ico" />
@@ -41,7 +42,7 @@
     <nav>
       <a id="home" href="index.html">Home</a>
       <a href="#">Chamber</a>
-      <a href="week01/chamber-site-plan.html">Site Plan</a>
+      <a href="week01/chamber-site-plan.html" target="_blank">Site Plan</a>
       <a href="#">Form</a>
     </nav>
     <main>
@@ -53,7 +54,11 @@
             Week1: <a href="#">Layout</a> | <a href="#">Media Query</a> |
             <a href="#">Js Pen</a>
           </li>
-          <li>Week2: <a href="./week02/design.html">Design Principles</a></li>
+          <li>
+            Week2: <a href="./week02/design.html">Design Principles</a> |
+            <a href="https://codepen.io/Ravylim87/pen/poYWpxO">CodePen</a>
+            | <a href="./week02/bom.html">JavaScript: DOM Manipulation</a>
+          </li>
           <li>Week3: <a href="#">------</a></li>
           <li>Week4: <a href="#">------</a></li>
           <li>Week5: <a href="#">------</a></li>
