--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <meta
       name="description"
       content="WDD 230 , Ravy Lim, course assignment portal"
-    />
-    <meta name="author" content="Ravy Lim" />
+    >
+    <meta name="author" content="Ravy Lim" >
     <!--Social Media Meta Tags-->
-    <meta property="og:title" content="WDD 240 - Homepage" />
-    <meta property="og:type" content="Angkor Wat - Cambodia Pride" />
-    <meta property="og:url" content="https://udomravylim.github.io/wdd230/" />
+    <meta property="og:title" content="WDD 240 - Homepage" >
+    <meta property="og:type" content="Angkor Wat - Cambodia Pride" >
+    <meta property="og:url" content="https://udomravylim.github.io/wdd230/" >
     <meta
       property="og:image"
       content="https://images.tripadeal.com.au/cdn-cgi/image/format=auto,width=1600/https://cstad.s3.ap-southeast-2.amazonaws.com/4559_Vietnam_Cambodia_WEB_HERO_1.jpg"
-    />
+    >
 
     <title>Ravy Lim - WDD 230 - Web Frontend Development</title>
     <link rel="icon" href="rasengan.ico" />
+    <!--Typography-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -29,9 +30,11 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Ubuntu:wght@300&display=swap"
       rel="stylesheet"
     />
-
+    <!--Link to CSS -->
+    <link rel="stylesheet" href="./styles/normalize.css" />
     <link rel="stylesheet" href="./styles/base.css" />
     <link rel="stylesheet" href="./styles/larger.css" />
+    <!--Link to JS-->
     <script src="scripts/hamburger.js" defer></script>
     <script src="scripts/getDates.js" defer></script>
   </head>
@@ -40,9 +43,9 @@
       <img src="./images/Profile_myPhoto_at_IdahoFall.jpg" alt="Ravy Lim" />
       <span>Ravy Lim</span>
       <!--HambergerNavigation-->
-    <button id="menu"></button>
+      <button id="menu"></button>
     </header>
-    
+
     <nav class="navigation">
       <a href="index.html" title="home">Home</a>
       <a href="#" title="chamber">Chamber</a>
@@ -51,6 +54,7 @@
       >
       <a href="#" title="form">Form</a>
     </nav>
+
     <main>
       <h1 class="title">WDD 230: Web Frontend Development</h1>
       <section class="card">
@@ -77,6 +81,7 @@
         <div id="weather"></div>
       </section>
     </main>
+
     <footer>
       <p id="copyright">&copy;</p>
       <p id="lastModified"></p>
