--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Ravy Lim" >
     <!--Social Media Meta Tags-->
     <meta property="og:title" content="WDD 240 - Homepage" >
-    <meta property="og:type" content="Angkor Wat - Cambodia Pride" >
+    <meta property="og:type" content="Website" >
     <meta property="og:url" content="https://udomravylim.github.io/wdd230/" >
     <meta
       property="og:image"
