--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta
       name="description"
       content="WDD 230 , Ravy Lim, course assignment portal"
@@ -10,7 +10,7 @@
     <meta name="author" content="Ravy Lim" >
     <!--Social Media Meta Tags-->
     <meta property="og:title" content="WDD 240 - Homepage" >
-    <meta property="og:type" content="Website" >
+    <meta property="og:type" content="website" >
     <meta property="og:url" content="https://udomravylim.github.io/wdd230/" >
     <meta
       property="og:image"
@@ -47,12 +47,12 @@
     </header>
 
     <nav class="navigation">
-      <a href="index.html" title="home">Home</a>
-      <a href="#" title="chamber">Chamber</a>
-      <a href="week01/chamber-site-plan.html" target="_blank" title="siteplan"
+      <a href="index.html" >Home</a>
+      <a href="#" >Chamber</a>
+      <a href="week01/chamber-site-plan.html" target="_blank"
         >Site Plan</a
       >
-      <a href="#" title="form">Form</a>
+      <a href="#">Form</a>
     </nav>
 
     <main>
