w04 small screen 1st try

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     >
 
     <title>Ravy Lim - WDD 230 - Web Frontend Development</title>
-    <link rel="icon" href="rasengan.ico" />
+    <link rel="icon" href="v.ico" />
     <!--Typography-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -37,9 +37,13 @@
     <!--Link to JS-->
     <script src="scripts/hamburger.js" defer></script>
     <script src="scripts/getDates.js" defer></script>
+    <script src="scripts/darkmode.js" defer></script>
   </head>
   <body>
     <header>
+      <div id="mode">
+        🔆
+      </div>
       <img src="./images/Profile_myPhoto_at_IdahoFall.jpg" alt="Ravy Lim" />
       <span>Ravy Lim</span>
       <!--HambergerNavigation-->
@@ -48,7 +52,7 @@
 
     <nav class="navigation">
       <a href="index.html" >Home</a>
-      <a href="#" >Chamber</a>
+      <a href="./chamber/index.html" >Chamber</a>
       <a href="week01/chamber-site-plan.html" target="_blank"
         >Site Plan</a
       >
