--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -8,7 +8,7 @@
       content="WDD 230 - Web Frontend Development - Ravy Lim - course assignment portal">
     <meta name="author" content="Ravy Lim">
     <title>Site Plan: Rexburg Chamber of Commerce Homepage</title>
-    <link rel="icon" href="../cute_dragon.ico" />
+    <link rel="icon" href="../navigation.ico" />
     <!--Typography-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
