add wdd230 at the bottom

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -315,7 +315,7 @@
         <a href="#">Form</a>
       </nav>
       <div id="owner">
-        <p id="copyright">&copy;</p>
+        <p id="copyright">WDD230 Project | &copy;</p>
         <p id="lastModified"></p>
       </div>
     </footer>
