--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <a href="https://codepen.io/Ravylim87/pen/poYWpxO">CodePen</a>
             | <a href="./week02/bom.html">JavaScript: DOM Manipulation</a>
           </li>
-          <li>Week3: <a href="#">------</a></li>
+          <li>Week3: <a href="week03/images/landscrape.webp">WebP</a> | <a href="week03/lazyload.html">Lazy Load</a></li>
           <li>Week4: <a href="#">------</a></li>
           <li>Week5: <a href="#">------</a></li>
           <li>Week6: <a href="#">------</a></li>
