w06 - adding iframe to main page

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -62,7 +62,7 @@
       <div id="hero_container">
         <img
           id="hero"
-          src="images/vecteezy_ai-generative-group-of-happy-business-man-and-business_29305546.jpg"
+          src="images/Rexburg-Temple-air-shot-scaled.webp"
           alt="Happy Business Man"
         />
         <button id="join_btn">Join Now</button>
@@ -79,7 +79,7 @@
           <h2>Chamber Challenge Marathon Extravaganza</h2>
           <img
             class="event_img"
-            src="./images/Marathon_01.webp"
+            src="./images/Marathon_crop_webp.webp"
             alt="Marathon"
           />
           <p>
@@ -105,7 +105,7 @@
           <h2>Business Brews & Banter Social Mixer</h2>
           <img
             class="event_img"
-            src="images/vecteezy_friends-and-family-taking-a-group-photo_29323785.jpg"
+            src="images/vecteezy_friends-and-family-webp-crop.webp"
             alt="friends and family group picture"
           />
           <p>
@@ -134,7 +134,7 @@
         <div class="recommend">
           <img
             class="display_img"
-            src="images/online-job-search.jpeg"
+            src="images/online-job-search webp.webp"
             alt="looking for a job"
           />
 
@@ -153,7 +153,7 @@
         <div class="recommend">
           <img
             class="display_img"
-            src="images/up_comming_event.jpeg"
+            src="images/upcomming_event webp.webp"
             alt="upcomming_event"
           />
 
@@ -181,7 +181,7 @@
         <div class="recommend">
           <img
             class="display_img"
-            src="images/Who-are-our-migrants.jpg"
+            src="images/Who-are-our-migrants webp.webp"
             alt="group of people standing togther as harmony"
           />
 
