--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
       content="WDD 230 , Ravy Lim, course assignment portal"
-    >
-    <meta name="author" content="Ravy Lim" >
+    />
+    <meta name="author" content="Ravy Lim" />
     <!--Social Media Meta Tags-->
-    <meta property="og:title" content="WDD 240 - Homepage" >
-    <meta property="og:type" content="website" >
-    <meta property="og:url" content="https://udomravylim.github.io/wdd230/" >
+    <meta property="og:title" content="WDD 240 - Homepage" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://udomravylim.github.io/wdd230/" />
     <meta
       property="og:image"
       content="https://images.tripadeal.com.au/cdn-cgi/image/format=auto,width=1600/https://cstad.s3.ap-southeast-2.amazonaws.com/4559_Vietnam_Cambodia_WEB_HERO_1.jpg"
-    >
+    />
 
     <title>Ravy Lim - WDD 230 - Web Frontend Development</title>
     <link rel="icon" href="v.ico" />
@@ -41,9 +41,7 @@
   </head>
   <body>
     <header>
-      <div id="mode">
-        🔆
-      </div>
+      <div id="mode">🔆</div>
       <img src="./images/Profile_myPhoto_at_IdahoFall.jpg" alt="Ravy Lim" />
       <span>Ravy Lim</span>
       <!--HambergerNavigation-->
@@ -51,13 +49,30 @@
     </header>
 
     <nav class="navigation">
-      <a href="index.html" >Home</a>
-      <a href="./chamber/index.html" >Chamber</a>
-      <a href="week01/chamber-site-plan.html" target="_blank"
-        >Site Plan</a
-      >
+      <a href="index.html">Home</a>
+      <a href="./chamber/index.html">Chamber</a>
+      <a href="week01/chamber-site-plan.html" target="_blank">Site Plan</a>
       <a href="#">Form</a>
     </nav>
+
+    <div class="hero">
+      <picture>
+        <source
+          srcset="images/newport-beach-temple-small.webp"
+          media="(max-width: 500px)"
+        />
+        <source
+          srcset="images/newport-beach-temple-medium.webp"
+          media="(max-width: 1000px)"
+        />
+        <img
+          src="images/newport-beach-temple-large.webp"
+          alt="san diego temple"
+          width="1500px"
+          height="750px"
+        />
+      </picture>
+    </div>
 
     <main>
       <h1 class="title">WDD 230: Web Frontend Development</h1>
@@ -73,7 +88,12 @@
             <a href="https://codepen.io/Ravylim87/pen/poYWpxO">CodePen</a>
             | <a href="./week02/bom.html">JavaScript: DOM Manipulation</a>
           </li>
-          <li>Week3: <a href="week03/images/landscrape.webp">WebP</a> | <a href="week03/lazyload.html">Lazy Load</a> | <a href="week03/responsive-images.html">Responsive Image</a> | <a href="week03/bom.html">BOM-using Local Storage</a></li>
+          <li>
+            Week3: <a href="week03/images/landscrape.webp">WebP</a> |
+            <a href="week03/lazyload.html">Lazy Load</a> |
+            <a href="week03/responsive-images.html">Responsive Image</a> |
+            <a href="week03/bom.html">BOM-using Local Storage</a>
+          </li>
           <li>Week4: <a href="#">------</a></li>
           <li>Week5: <a href="#">------</a></li>
           <li>Week6: <a href="#">------</a></li>
@@ -84,8 +104,11 @@
         <!--Information placeholder about the weather, number of visits to the page, etc.-->
         <div id="weather"></div>
       </section>
+      <div class="map">
+        <iframe class="responsive-iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d106094.8651168383!2d-118.23851687849123!3d33.80032331323804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2cae84099d759%3A0xa1003afac42a8faa!2sLong%20Beach%2C%20CA!5e0!3m2!1sen!2sus!4v1707855283406!5m2!1sen!2sus" width="1200" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
     </main>
-
+    
     <footer>
       <p id="copyright">&copy;</p>
       <p id="lastModified"></p>
