add weather and num of visit page

--- a/week03/responsive-images.html
+++ b/week03/responsive-images.html
@@ -14,7 +14,7 @@
             <picture>
                 <source srcset="images/hero-small.webp" media="(max-width: 500px)">
                 <source srcset="images/hero-medium.webp" media="(max-width: 1000px)">
-                <img src="images/san-diego-mormon-temple-1164678-wallpaper.jpg" alt="san diego temple" width="1500px" height="750px">
+                <img src="images/san-diego-mormon-temple-1164678-wallpaper.jpg" alt="san diego temple" width="1500" height="750">
 
 
             </picture>
