--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
       content="WDD 230 , Ravy Lim, course assignment portal"
-    >
-    <meta name="author" content="Ravy Lim" >
+    />
+    <meta name="author" content="Ravy Lim" />
     <!--Social Media Meta Tags-->
-    <meta property="og:title" content="WDD 240 - Homepage" >
-    <meta property="og:type" content="website" >
-    <meta property="og:url" content="https://udomravylim.github.io/wdd230/" >
+    <meta property="og:title" content="WDD 240 - Homepage" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://udomravylim.github.io/wdd230/" />
     <meta
       property="og:image"
       content="https://images.tripadeal.com.au/cdn-cgi/image/format=auto,width=1600/https://cstad.s3.ap-southeast-2.amazonaws.com/4559_Vietnam_Cambodia_WEB_HERO_1.jpg"
-    >
+    />
 
     <title>Ravy Lim - WDD 230 - Web Frontend Development</title>
     <link rel="icon" href="v.ico" />
@@ -38,6 +38,7 @@
     <script src="scripts/hamburger.js" defer></script>
     <script src="scripts/getDates.js" defer></script>
     <script src="scripts/darkmode.js" defer></script>
+    <script src="scripts/numOfVisit.js" defer></script>
   </head>
   <body>
     <header>
@@ -68,8 +69,8 @@
         <img
           src="images/newport-beach-temple-large.webp"
           alt="san diego temple"
-          width="1500px"
-          height="750px"
+          width="1500"
+          height="750"
         />
       </picture>
     </div>
@@ -101,14 +102,47 @@
       </section>
       <section class="card">
         <h2>Information</h2>
-        <!--Information placeholder about the weather, number of visits to the page, etc.-->
-        <div id="weather"></div>
+        <p>
+          <span class="label">Number of Visits: </span
+          ><span class="visits"></span>
+        </p>
+        <!--weather section-->
+        <a
+          class="weatherwidget-io"
+          href="https://forecast7.com/en/43d82n111d79/rexburg/?unit=us"
+          data-label_1="REXBURG"
+          data-label_2="WEATHER"
+          data-theme="gray"
+          >REXBURG WEATHER</a
+        >
+        <script>
+          !(function (d, s, id) {
+            var js,
+              fjs = d.getElementsByTagName(s)[0];
+            if (!d.getElementById(id)) {
+              js = d.createElement(s);
+              js.id = id;
+              js.src = "https://weatherwidget.io/js/widget.min.js";
+              fjs.parentNode.insertBefore(js, fjs);
+            }
+          })(document, "script", "weatherwidget-io-js");
+        </script>
+        <!--weather section-->
+       
       </section>
       <div class="map">
-        <iframe class="responsive-iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d106094.8651168383!2d-118.23851687849123!3d33.80032331323804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2cae84099d759%3A0xa1003afac42a8faa!2sLong%20Beach%2C%20CA!5e0!3m2!1sen!2sus!4v1707855283406!5m2!1sen!2sus" width="1200" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d32420.89979923854!2d-111.82015196152058!3d43.82100394239685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53540a4b807a98b1%3A0x4a49d8d1d2181c73!2sRexburg%2C%20ID!5e0!3m2!1sen!2sus!4v1707883743863!5m2!1sen!2sus"
+          width="1900"
+          height="300"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        >
+        </iframe>
+      </div>
     </main>
-    
     <footer>
       <p id="copyright">&copy;</p>
       <p id="lastModified"></p>
